[gd_scene load_steps=18 format=3 uid="uid://d007f2w53yafs"]

[ext_resource type="Script" uid="uid://c02qmojv3tm7c" path="res://entities/hazard/landmine.gd" id="1_obobh"]
[ext_resource type="Texture2D" uid="uid://dbyshobo5o4rm" path="res://assets/objects/landmine.png" id="2_o4qj2"]
[ext_resource type="PackedScene" uid="uid://drmrasoyo3u8a" path="res://entities/entity_audio_player.tscn" id="3_fhtll"]
[ext_resource type="Texture2D" uid="uid://cmebnafme5no6" path="res://assets/objects/explosion-Sheet.png" id="3_o4qj2"]
[ext_resource type="AudioStream" uid="uid://caqrj700u8y83" path="res://assets/audio/750825__artninja__custom_artillery_booming_explosive_impact_sounds.wav" id="4_7lkje"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fhtll"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7lkje"]
radius = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fhtll"]
atlas = ExtResource("3_o4qj2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lkje"]
atlas = ExtResource("3_o4qj2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxylp"]
atlas = ExtResource("3_o4qj2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blcis"]
atlas = ExtResource("3_o4qj2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o5yy"]
atlas = ExtResource("3_o4qj2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmlui"]
atlas = ExtResource("3_o4qj2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef535"]
atlas = ExtResource("3_o4qj2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv78q"]
atlas = ExtResource("3_o4qj2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwwkj"]
atlas = ExtResource("3_o4qj2")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_lshru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhtll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lkje")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_jxylp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blcis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o5yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmlui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef535")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv78q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwwkj")
}],
"loop": false,
"name": &"explosion",
"speed": 13.0
}]

[node name="Landmine" type="Node2D"]
script = ExtResource("1_obobh")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_o4qj2")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TriggerArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
shape = SubResource("CircleShape2D_fhtll")

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_7lkje")

[node name="EntityAudioPlayer" parent="." instance=ExtResource("3_fhtll")]
stream = ExtResource("4_7lkje")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lshru")
animation = &"explosion"
frame = 4
frame_progress = 0.0971482

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
